<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
    >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <Button
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Download"
                    android:onClick="startDownload"
                    />

            <TextView
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
        </LinearLayout>

        <RadioGroup
                android:id="@+id/config_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Host:"
                />
            <RadioButton
                    android:id="@+id/config_host_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Activity"
                    android:checked="true"
                    />
            <RadioButton
                    android:id="@+id/config_host_windowManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Window Manager"
                    />
        </RadioGroup>

        <RadioGroup
                android:id="@+id/config_dataEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Data entry:"
                    />
            <RadioButton
                    android:id="@+id/config_dataEntry_automatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Automatic"
                    android:checked="true"
                    />
            <RadioButton
                    android:id="@+id/config_dataEntry_manual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Manual"
                    />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/webViewWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            />

</LinearLayout>